# restaurant_graph

./: .gitignore  README.md  grafo_interativo.html  grafo_restaurantes_pyvis.html  main.py  ner_processor.py  pyproject.toml  restaurant_graph.gexf  scraper.py  visualize.py  visualize2.py  visualize_pyvis.py
data/cameroon/: childrens.txt  dissert.txt  drinks.txt  main_course.txt
docs/: analise.md
graph/: __init__.py  analysis.py  builder.py  ingredients.py  ner.py
json_graphs/: bambu.json  camaroes.json  cameroon.json
json_graphs/cameroon/: childrens.json  dissert.json  drinks.json  main_course.json
scrapers/: __init__.py  __main__.py  _runner.py  _types.py  bambu.py  camaroes.py
viz/: __init__.py  _palette.py  analysis.py  dashboard.py  interactive.py  static.py
