[project]
name = "restaurant-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pdfplumber>=0.11.9",
    "pyvis>=0.3.2",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
]
