[project]
name = "restaurant-graph"
version = "0.1.0"
description = "Menu graph builder that compares two Brazilian restaurants via NER over dish descriptions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pdfplumber>=0.11.9",
    "pt-core-news-lg",
    "pyvis>=0.3.2",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
]

[dependency-groups]
dev = ["ruff>=0.13"]

[tool.uv.sources]
pt-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.8.0/pt_core_news_lg-3.8.0-py3-none-any.whl" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (modernize legacy syntax)
    "B",    # bugbear
    "SIM",  # simplify
]
